--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/styles.css">
     <title>Slicing Torch</title>
 </head>
 
